@startuml erd.puml
title DVLD System - ERD

entity Person {
  * PersonID : int
  --
  NationalNumber : string
  FullName : string
}

entity Driver {
  * DriverID : int
}

entity License {
  * LicenseID : int
  --
  LicenseNumber : string
}

entity Application {
  * ApplicationID : int
}

entity TestAppointment {
  * AppointmentID : int
}

entity TestResult {
  * TestResultID : int
}

Person ||--o| Driver
Person ||--o{ Application
Driver ||--o{ License
Application ||--o{ TestAppointment
TestAppointment ||--o| TestResult

@enduml